src/test/deca/context/invalid/obtained_res/surchargeRetTypecont.res
DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:40) - verify program: start
DEBUG fr.ensimag.deca.tree.ListDeclClass.verifyListClass(ListDeclClass.java:43) - verify listClass: start
DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:45) - verify program: Pass 1 end
./src/test/deca/context/invalid/created/testPass2/surchargeRetType.deca:10:4: ReturnTypeMismatchException: Method redefinition is allowed, but the return type must be a subtype of the original method's return type.
